--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,15 @@
-# Compiled class file
-*.class
+## Intellij IDEA stuff:
+.idea/
+*.ipr
+*.iws
+*.iml
 
-# Log file
-*.log
+# Eclipse stuff
+.project
 
-# BlueJ files
-*.ctxt
+# Gradle stuff
+.gradle
+build/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
